# ds2026-B11356027--

./: README.md  function_def.txt  pyproject.toml
.traces/: line-U4ba0908c1dd53d40ffc1635123fb2bae-619619609968640086.json  line-U4ba0908c1dd53d40ffc1635123fb2bae-619625251173302410.json  line-U4ba0908c1dd53d40ffc1635123fb2bae-619625733266604203.json  line-U4ba0908c1dd53d40ffc1635123fb2bae-619625847301341203.json  line-U4ba0908c1dd53d40ffc1635123fb2bae-619628363363647523.json  line-U4ba0908c1dd53d40ffc1635123fb2bae-619628495886876673.json  line-U4ba0908c1dd53d40ffc1635123fb2bae-619628819602997302.json
app/api/: stream.py
app/channels/: line.py
app/generator/: contract.py  narrative.py  responder.py
app/graph/: feature_extractor.py  nodes.py  sufficiency.py
app/router/: intent_router.py  prompts.py
docs/: QA.md  claude-credential-provisioning.md  credential-provisioning.md  gemini-credential-provisioning.md  github-copilot-credential-provisioning.md
final-project/: .env.example  .gitignore  AGENTS.md  README.md  test_query.sql
scripts/: ingest_markdown.py
tests/: __init__.py  conftest.py  test_ai_providers.py  test_answer_contract_builder.py  test_api_chat.py  test_clarifier.py  test_crawl_to_markdown.py  test_eval_metrics.py  test_eval_runner.py  test_feature_extractor.py  test_fusion.py  test_hitl_loop.py  test_hybrid_retrieval.py  test_judge_scorer.py  test_line_webhook.py  test_narrative_renderer.py  test_notion_ingester.py  test_persistence.py  test_prompt_differentiation.py  test_query_transform.py  test_rag_graph_equivalence.py  test_retrieval_analytics.py  test_router.py  test_security_guards.py  test_seed_expander.py  test_skill_loader.py  test_streaming.py  test_tracer.py
urls/: nextjs.txt
week02/: README.md
week03/: .env.example  README.md  config.json  docker-compose.yml
week09/: README.md
(+214 files in other folders)
